apps/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    # garder/retirer la whitelist selon votre edge
    # nginx.ingress.kubernetes.io/whitelist-source-range: "164.2.0.0/16,10.10.0.0/24,51.178.174.75/32"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd-labnum.aphp.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
